// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailedRecipe should display message when the recipe does not exist 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="detailedRecipe"
>
    <Link
        replace={false}
        to="/"
    >
        Return to list
    </Link>
    <div>
        Sorry, this recipe doesn't exist or may have been removed
    </div>
</div>,
  "nodes": Array [
    <div
      className="detailedRecipe"
>
      <Link
            replace={false}
            to="/"
      >
            Return to list
      </Link>
      <div>
            Sorry, this recipe doesn't exist or may have been removed
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <DetailedRecipe
        favourites={Array []}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": DetailedRecipe {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "favourites": Array [],
        },
        "refs": Object {},
        "state": Object {
          "recipe": undefined,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="detailedRecipe"
>
          <Link
                    replace={false}
                    to="/"
          >
                    Return to list
          </Link>
          <div>
                    Sorry, this recipe doesn't exist or may have been removed
          </div>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="detailedRecipe"
>
          <Link
                    replace={false}
                    to="/"
          >
                    Return to list
          </Link>
          <div>
                    Sorry, this recipe doesn't exist or may have been removed
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DetailedRecipe
    favourites={Array []}
/>,
}
`;

exports[`DetailedRecipe should render the recipe correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="detailedRecipe"
>
    <Link
        replace={false}
        to="/"
    >
        Return to list
    </Link>
    <Recipe
        recipe={
            Object {
                "id": "1",
                "ingredients": Array [
                  Object {
                    "name": "Chicken",
                    "quantity": "4",
                  },
                  Object {
                    "name": "Lemon",
                    "quantity": "1",
                  },
                  Object {
                    "measure": "tsp",
                    "name": "Thyme",
                    "quantity": "1",
                  },
                ],
                "name": "Lemon Chicken",
                "time": "30",
              }
        }
    >
        <Favourite
            favourite={false}
            recipeId="1"
        />
    </Recipe>
</div>,
  "nodes": Array [
    <div
      className="detailedRecipe"
>
      <Link
            replace={false}
            to="/"
      >
            Return to list
      </Link>
      <Recipe
            recipe={
                  Object {
                        "id": "1",
                        "ingredients": Array [
                          Object {
                            "name": "Chicken",
                            "quantity": "4",
                          },
                          Object {
                            "name": "Lemon",
                            "quantity": "1",
                          },
                          Object {
                            "measure": "tsp",
                            "name": "Thyme",
                            "quantity": "1",
                          },
                        ],
                        "name": "Lemon Chicken",
                        "time": "30",
                      }
            }
      >
            <Favourite
                  favourite={false}
                  recipeId="1"
            />
      </Recipe>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <DetailedRecipe
        favourites={Array []}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": DetailedRecipe {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "favourites": Array [],
        },
        "refs": Object {},
        "state": Object {
          "recipe": Object {
            "id": "1",
            "ingredients": Array [
              Object {
                "name": "Chicken",
                "quantity": "4",
              },
              Object {
                "name": "Lemon",
                "quantity": "1",
              },
              Object {
                "measure": "tsp",
                "name": "Thyme",
                "quantity": "1",
              },
            ],
            "name": "Lemon Chicken",
            "time": "30",
          },
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="detailedRecipe"
>
          <Link
                    replace={false}
                    to="/"
          >
                    Return to list
          </Link>
          <Recipe
                    recipe={
                              Object {
                                        "id": "1",
                                        "ingredients": Array [
                                          Object {
                                            "name": "Chicken",
                                            "quantity": "4",
                                          },
                                          Object {
                                            "name": "Lemon",
                                            "quantity": "1",
                                          },
                                          Object {
                                            "measure": "tsp",
                                            "name": "Thyme",
                                            "quantity": "1",
                                          },
                                        ],
                                        "name": "Lemon Chicken",
                                        "time": "30",
                                      }
                    }
          >
                    <Favourite
                              favourite={false}
                              recipeId="1"
                    />
          </Recipe>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="detailedRecipe"
>
          <Link
                    replace={false}
                    to="/"
          >
                    Return to list
          </Link>
          <Recipe
                    recipe={
                              Object {
                                        "id": "1",
                                        "ingredients": Array [
                                          Object {
                                            "name": "Chicken",
                                            "quantity": "4",
                                          },
                                          Object {
                                            "name": "Lemon",
                                            "quantity": "1",
                                          },
                                          Object {
                                            "measure": "tsp",
                                            "name": "Thyme",
                                            "quantity": "1",
                                          },
                                        ],
                                        "name": "Lemon Chicken",
                                        "time": "30",
                                      }
                    }
          >
                    <Favourite
                              favourite={false}
                              recipeId="1"
                    />
          </Recipe>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DetailedRecipe
    favourites={Array []}
/>,
}
`;
